--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -111,6 +111,65 @@
                     <div class="col-md-9">
                                                                                 <div class="panel panel-default">
                                 <div class="panel-heading">
+                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                </div>
+                                <div class="panel-body">
+                                    
+                                    <dl>
+                                        <dt>资费</dt>
+                                                                                <dd>
+                                            <p>
+                                                <label>基础版-县令：</label> ¥15.00 /月付。 
+                                                                                                每月 150G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>进阶版-知府：</label> ¥25.00 /月付。 
+                                                                                                每月 260G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>高阶版-巡抚：</label> ¥35.00 /月付。 
+                                                                                                每月 370G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>专业版-总督：</label> ¥45.00 /月付。 
+                                                                                                每月 480G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                            </dl>
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                </div>
+                            </div>
+                            <hr />
+                                                        <div class="panel panel-default">
+                                <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://155.248.222.101/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" target="_blank"><b>西游云</b></a>
                                 </div>
                                 <div class="panel-body">
@@ -464,16 +523,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-6-8-node-share.htm" title="「6月8日」最高速度22.2M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「6月8日」最高速度22.2M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-29-free-v2ray.htm" title="「5月29日」最高速度22.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「5月29日」最高速度22.5M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-13-free-subscribe-node.htm" title="「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月13日」最高速度19.8M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-15-free-node-subscribe-links.htm" title="「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「6月15日」最高速度20.6M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-17-free-v2ray.htm" title="「6月17日」最高速度20.9M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「6月17日」最高速度20.9M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="「5月31日」最高速度21.4M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接">「5月31日」最高速度21.4M/S，2025年V2ray/SSR/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-1-node-share-links.htm" title="「6月1日」最高速度22.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「6月1日」最高速度22.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-22-free-subscribe-node.htm" title="「6月22日」最高速度20.6M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「6月22日」最高速度20.6M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-9-free-subscribe-node.htm" title="「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「6月9日」最高速度19.1M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-6-free-subscribe-node.htm" title="「5月6日」最高速度20.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「5月6日」最高速度20.8M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-14-free-high-speed-nodes.htm" title="「5月14日」最高速度18M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「5月14日」最高速度18M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-20-free-high-speed-nodes.htm" title="「6月20日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「6月20日」最高速度20.9M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-v2ray.htm" title="「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「5月27日」最高速度19.4M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-node-share.htm" title="「6月14日」最高速度20.9M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「6月14日」最高速度20.9M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-18-free-subscribe-node.htm" title="「6月18日」最高速度20M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「6月18日」最高速度20M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-7-free-v2ray.htm" title="「5月7日」最高速度22.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「5月7日」最高速度22.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-node-subscribe.htm" title="「5月22日」最高速度19M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「5月22日」最高速度19M/S，2025年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-26-free-node-subscribe.htm" title="「6月26日」最高速度20.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「6月26日」最高速度20.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-28-node-share-links.htm" title="「5月28日」最高速度18.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接">「5月28日」最高速度18.7M/S，2025年Shadowrocket/V2ray/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-28-free-v2ray-subscribe.htm" title="「6月28日」最高速度20.2M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「6月28日」最高速度20.2M/S，2025年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -485,7 +544,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
